feature: query sort
