# app/models/enums/query.py
@@ -1,0 +1,6 @@
+from app.models.enums import BaseEnum
+
+
+class SortByEnum(str, BaseEnum):
+    ASC = "asc"
+    DESC = "desc"
